internal/compiler/testdata/fuzz/crashers/078b20ab7f25e62fb4bd887f3e59d2cece1801e6.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1140682]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc000187620, 0x0, 0x9, 0x8, 0x100b456, 0x2)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreValues(0xc000187620, 0xc00013f680, 0x100b456, 0xc000195600, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:125 +0x11b
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc000187620, 0xc00013f680, 0x0, 0xc00006dc60, 0x1010f93, 0xc000195600)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:115 +0xb1
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc000187620, 0xc000065ae0, 0x0, 0x2, 0xc000192670, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc000187620, 0xc000181c00, 0x0, 0x2, 0xc000192670, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc000187620, 0xc000181c00, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x6d21000, 0x8, 0x8, 0x3)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:36 +0x3a2
go-fuzz-dep.Main(0xc00006df70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2